Added IEntity / tblGame / tblGameState / tblUser / tblUserGame to Entities - Added to Pl.Test

--- a/Checkers/Checkers.PL/Checkers.PL.csproj
+++ b/Checkers/Checkers.PL/Checkers.PL.csproj
@@ -19,4 +19,8 @@
 	  <Folder Include="Data\" />
 	  <Folder Include="Entities\" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Checkers.BL.Models\Checkers.BL.Models.csproj" />
+	</ItemGroup>
 </Project>
