--- a/Checkers/Checkers/Checkers.csproj
+++ b/Checkers/Checkers/Checkers.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Checkers.BL.Models\Checkers.BL.Models.csproj" />
+  </ItemGroup>
+
 </Project>
