--- a/Checkers.UI/appsettings.json
+++ b/Checkers.UI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DVDCentralConnection": "Server=server-31591-300054183.database.windows.net;Database=dvdcentraldb;User ID=300054183db;Password=Test123!",
-    "DVDCentralConnection2": "Server=(localdb)\\MSSQLLocalDB;Database=SMS.DVDCentral.DB;Integrated Security=True"
+    "DVDCentralConnection1": "Server=server-31591-300054183.database.windows.net;Database=dvdcentraldb;User ID=300054183db;Password=Test123!",
+    "DVDCentralConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Checkers.DB;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
