did some minor changes

--- a/Checkers.API/Checkers.API.csproj
+++ b/Checkers.API/Checkers.API.csproj
@@ -20,4 +20,8 @@
 	  <ProjectReference Include="..\Checkers.PL\Checkers.PL.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Controllers\" />
+	</ItemGroup>
+
 </Project>
