--- a/Checkers.PL/Checkers.PL.csproj
+++ b/Checkers.PL/Checkers.PL.csproj
@@ -18,6 +18,7 @@
 	<ItemGroup>
 	  <Folder Include="Data\" />
 	  <Folder Include="Entities\" />
+	  <Folder Include="Migrations\" />
 	</ItemGroup>
 
 	<ItemGroup>
