Unit tests work now.

--- a/Checkers.PL.Test/Checkers.PL.Test.csproj
+++ b/Checkers.PL.Test/Checkers.PL.Test.csproj
@@ -26,4 +26,17 @@
     <ProjectReference Include="..\Checkers.PL\Checkers.PL.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<Content Include="appsettings.Development.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</Content>
+		<Content Include="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</Content>
+	</ItemGroup>
+
 </Project>
