--- a/Checkers.BL.Test/Checkers.BL.Test.csproj
+++ b/Checkers.BL.Test/Checkers.BL.Test.csproj
@@ -21,4 +21,17 @@
 	  <ProjectReference Include="..\Checkers.Reporting\Checkers.Reporting.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<Content Include="appsettings.Development.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</Content>
+		<Content Include="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</Content>
+	</ItemGroup>
+
 </Project>
