--- a/Checkers.MigrationHandler/appsettings.json
+++ b/Checkers.MigrationHandler/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
+    "DatabaseConnection": "Server=server-31591-300054183.database.windows.net;Database=bigprojectdb;User ID=300054183db;Password=Test123!",
     "DatabaseConnection2": "Server=server-31591-300054183.database.windows.net;Database=dvdcentraldb;User ID=300054183db;Password=Test123!",
-    "DatabaseConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Checkers.DB;Integrated Security=True"
+    "DatabaseConnection1": "Server=(localdb)\\MSSQLLocalDB;Database=Checkers.DB;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
