Made the PL tests actually do something.

--- a/Checkers.PL.Test/Checkers.PL.Test.csproj
+++ b/Checkers.PL.Test/Checkers.PL.Test.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Checkers.BL\Checkers.BL.csproj" />
     <ProjectReference Include="..\Checkers.PL\Checkers.PL.csproj" />
   </ItemGroup>
 
