--- a/Checkers.API/appsettings.json
+++ b/Checkers.API/appsettings.json
@@ -1,9 +1,38 @@
 {
+  "AppSettings": {
+    "Secret": "a94a8fe5ccb19ba61c4c0873d391e987982fbbd3"
+  },
+  "ConnectionStrings": {
+    "DVDCentralConnection": "Server=server-31591-300054183.database.windows.net;Database=bigprojectdb;User ID=300054183db;Password=Test123!",
+    "DVDCentralConnection1": "Server=(localdb)\\MSSQLLocalDB;Database=Checkers.DB;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=server-31591-300054183.database.windows.net;Initial Catalog=bigprojectdb;User ID=300054183db;Password=Test123!;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true,
+          "columnOptionsSection": {
+            "additionalColumns": [
+              {
+                "ColumnName": "UserId",
+                "DataType": "varchar",
+                "DataLength": 20
+              }
+            ]
+          }
+        }
+      }
+    ]
   },
   "AllowedHosts": "*"
 }
