I think I added User Authentication.

--- a/Checkers.UI2/Checkers.UI2.csproj
+++ b/Checkers.UI2/Checkers.UI2.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BDF.Utility\BDF.Utility.csproj" />
+    <ProjectReference Include="..\Checkers.BL.Models\Checkers.BL.Models.csproj" />
+    <ProjectReference Include="..\Checkers.BL\Checkers.BL.csproj" />
+  </ItemGroup>
+
 </Project>
