Made an API test, update doesn't work

--- a/Checkers.API/appsettings.json
+++ b/Checkers.API/appsettings.json
@@ -3,8 +3,8 @@
     "Secret": "a94a8fe5ccb19ba61c4c0873d391e987982fbbd3"
   },
   "ConnectionStrings": {
-    "DVDCentralConnection": "Server=server-31591-300054183.database.windows.net;Database=bigprojectdb;User ID=300054183db;Password=Test123!",
-    "DVDCentralConnection1": "Server=(localdb)\\MSSQLLocalDB;Database=Checkers.DB;Integrated Security=True"
+    "CheckersConnection1": "Server=server-31591-300054183.database.windows.net;Database=bigprojectdb;User ID=300054183db;Password=Test123!",
+    "CheckersConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Checkers.DB;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
