--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Checkers.UI2/Models/BoardTile.cs
+/Checkers.UI2/Views/Game/Index.cshtml
