Added a login page

--- a/Checkers.UI.Final/appsettings.json
+++ b/Checkers.UI.Final/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DatabaseConnection1": "Server=server-31591-300054183.database.windows.net;Database=bigprojectdb;User ID=300054183db;Password=Test123!",
+    "DatabaseConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Checkers.DB;Integrated Security=True"
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "fvtc.edu",
+    "TenantId": "ae888c53-4d60-47da-a75a-c8a10f1d47b0",
+    "ClientId": "407753d3-0028-4fdd-a423-276e65fe4491",
+    "CallbackPath": "/signin-oidc"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
