--- a/Checkers.UI.Final/Checkers.UI.Final.csproj
+++ b/Checkers.UI.Final/Checkers.UI.Final.csproj
@@ -6,4 +6,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" NoWarn="NU1605" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.4" NoWarn="NU1605" />
+		<PackageReference Include="Microsoft.Identity.Web" Version="2.17.4" />
+		<PackageReference Include="Microsoft.Identity.Web.UI" Version="2.17.4" />
+		<PackageReference Include="Microsoft.Identity.Web.DownstreamApi" Version="2.17.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+    <ProjectReference Include="..\BDF.Utility\BDF.Utility.csproj" />
+    <ProjectReference Include="..\Checkers.BL.Models\Checkers.BL.Models.csproj" />
+    <ProjectReference Include="..\Checkers.BL\Checkers.BL.csproj" />
+  </ItemGroup>
+
 </Project>
